css/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    line-height: 1.7em;
    color: #7f8c8d;
    font-size: 16px;
}

h1, h2, h3, h4, h5, h6, label {
    color: #34495e;
}

.pure-img-responsive {
    max-width: 100%;
    height: auto;
}

/*
 * -- LAYOUT STYLES --
 * These are some useful classes which I will need
 */
.l-box {
    padding: 1em;
}

.is-center {
    text-align: center;
}

.home-menu {
    padding: 0.5em;
    text-align: center;
    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
    background: #004791;
}
.pure-menu.pure-menu-fixed {
    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;
    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
}
.pure-menu-link:visited {
  color: none;
}
.menu-heading-image {
  padding: 0;
  max-height: 50px;
}

.home-menu a {
    color: white;
}
.home-menu li a:hover,
.home-menu li a:focus {
    background: none;
    border: none;
    color: #AECFE5;
}

.social-media-container {
	text-align: center;
	margin-top: 140px;
}
.social {
  height: 65px;
  background-color: rgba(0, 0, 0, .5);
  border-radius: 18px;
}

.splash-container {
  background: #1f8dd6;
  z-index: 1;
  overflow: hidden;
  /* The following styles are required for the "scroll-over" effect */
  width: 100%;
  height: 88%;
  top: 0;
  left: 0;
  position: fixed !important;
}

.splash-container-background-image {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;

  /* Set up proportionate scaling */
  width: 100%;
  height: auto;

  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
}

.splash {
    /* absolute center .splash within .splash-container */
    width: 80%;
    height: 50%;
    margin: auto;
    position: absolute;
    top: 100px; left: 0; bottom: 0; right: 0;
    text-align: center;
    text-transform: uppercase;
}

/* This is the main heading that appears on the blue section */
.splash-head {
  margin: 0;
  font-size: 40px;
  font-weight: bold;
  color: white;
  font-weight: 100;
  line-height: 1em;
  text-shadow: 0px 0px 5px black;
}

/* This is the subheading that appears on the blue section */
.splash-subhead {
  color: white;
  letter-spacing: 0.05em;
  text-shadow: 0px 0px 5px black;
}

/*
 * -- CONTENT STYLES --
 * This represents the content area (everything below the blue section)
 */
.content-wrapper {
    /* These styles are required for the "scroll-over" effect */
    position: absolute;
    top: 87%;
    width: 100%;
    min-height: 12%;
    z-index: 2;
}

/* This is the class used for the main content headers (<h2>) */
.content-head {
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    padding: 1em 0 0;
    margin: 0;
}
.content-head-subtitle {
  margin: 15px;
  font-size: 14px;
  color: whitesmoke;
}

/* This is a modifier class used when the content-head is inside a ribbon */
.content-head-ribbon {
    color: white;
}

/* This is the class used for the content sub-headers (<h3>) */
.content-subhead {
    color: #1f8dd6;
}
.content-subhead i {
    margin-right: 7px;
}

/* This is the class used for the dark-background areas. */
.ribbon {
    background: #004791;
    color: #aaa;
}

#tech-stack-link, #portfolio-link {
  padding-bottom: 45px;
  background-color: white;
}

.tech-title {
  color: white;
  margin: 3px;
}

.main-qualities-container {
  background: white;
  margin-bottom: -30px; /* used in help with #tech-stack-link so the page jumps to th correct spot when clicking link on top 'Tech Stack' */
}

.portfolio-container {
  background-color:  white;
  margin-top: -20px;
}

.youni-demo-video-container {
  margin-top: 20px;
}

/* This is the class used for the footer */
.footer {
    background: #002a57;
    color: white;
}
.github-footer-link {
  color: white;
}

/*
 * -- TABLET (AND UP) MEDIA QUERIES --
 * On tablets and other medium-sized devices, we want to customize some
 * of the mobile styles.
 */
 @media (max-width: 48em) {
   body {
     font-size: 13px;
   }
 }
@media (min-width: 48em) {

    /* We want to give the content area some more padding */
    .content {
        padding: 1em;
    }

    /* We can align the menu header to the left, but float the
    menu items to the right. */
    .home-menu {
        text-align: left;
    }
    .home-menu ul {
        float: right;
    }

    /* We decrease the width of the .splash, since we have more width
    to work with */
    .splash {
        width: 50%;
        height: 50%;
    }

    .splash-head {
        font-size: 250%;
    }


    /* We remove the border-separator assigned to .l-box-lrg */
    .l-box-lrg {
        border: none;
    }

}

/*
 * -- DESKTOP (AND UP) MEDIA QUERIES --
 * On desktops and other large devices, we want to over-ride some
 * of the mobile and tablet styles.
 */
@media (min-width: 78em) {
    /* We increase the header font size even more */
    .splash-head {
        font-size: 300%;
    }
}

